# dl-model-deployment-tutorial

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  train_mnist.py
backend/: app.py  model_handler.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
models/: mnist_cnn.pth
